RESOLVED FIXED92859
[Qt] ImageDiff should use float division instead of integer
https://bugs.webkit.org/show_bug.cgi?id=92859
Summary [Qt] ImageDiff should use float division instead of integer
Csaba Osztrogonác
Reported 2012-08-01 03:32:28 PDT
as the other port does ... patch is coming soon
Attachments
Patch (1.26 KB, patch)
2012-08-01 03:34 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2012-08-01 03:34:22 PDT
Zoltan Herczeg
Comment 2 2012-08-01 04:34:55 PDT
Comment on attachment 155772 [details] Patch Nice catch! r=me
Csaba Osztrogonác
Comment 3 2012-08-01 04:41:46 PDT
Comment on attachment 155772 [details] Patch Clearing flags on attachment: 155772 Committed r124324: <http://trac.webkit.org/changeset/124324>
Csaba Osztrogonác
Comment 4 2012-08-01 04:41:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.