[Qt] ImageDiff should use float division instead of integer https://bugs.webkit.org/show_bug.cgi?id=92859

Reviewed by Zoltan Herczeg.

* DumpRenderTree/qt/ImageDiff.cpp:
(main):

git-svn-id: svn://svn.chromium.org/blink/trunk@124324 bbb929c8-8fbe-4397-9dbb-9b2b20218538